@@ -6,18 +6,18 @@
 
 	.offset 40
 	
-.ifeq nop_type - 1
+ .ifeq nop_type - 1
 	nop 0
-.else
-.ifeq nop_type - 2
+ .else
+ .ifeq nop_type - 2
 	l.nop 0
-.else
-.ifeq nop_type - 3
+ .else
+ .ifeq nop_type - 3
 	nopr 1
-.else
+ .else
 	nop
-.endif
-.endif
-.endif
+ .endif
+ .endif
+ .endif
 
 ;# { dg-warning "Warning: dwarf line number information for .* ignored" "" { xfail i370-*-* mcore-*-* mn10200-*-* moxie-*-* openrisc-*-* or32-*-* v850-*-* } 0 }
